# Strom-App

./: .gitignore  Dockerfile  app.dockerfile  devity.config  main.py  pyproject.toml  readme.md  y23.pkl
.github/workflows/: docker-image.yml
app/: main.py  y2023.json  y2024.json
data/: data.md
