[tool.poetry]
name = "Strom-Tracker-App"
version = "0.1.0"
description = ""
authors = ["MrMaransm <ron_marvin@yahoo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
streamlit-elements = "==0.1.*"
datetime = "^5.5"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
